--- a/src/components/SearchInp/SearchInp.scss
+++ b/src/components/SearchInp/SearchInp.scss
@@ -5,7 +5,11 @@
         height: 2.8rem;
         padding: 0 2em 0 1em;
         border: none;
+        font-size: 16px;
         border-radius: 5px;
+        &::placeholder{
+            color:rgba($color: black, $alpha: 0.4);
+        }
     }
 }
 @media only screen and (max-width: 768px){
