--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,11 +7,16 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-position: center;
+
     .header-content {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
+        flex-direction: column;
+        gap: 25px;
+
         .header-main {
             display: flex;
             justify-content: space-between;
@@ -23,14 +28,12 @@ header {
                 max-width: 450px;
                 display: flex;
                 align-items: flex-start;
-                gap: 25px;
                 flex-direction: column;
             }
 
             .log-in {
                 display: flex;
                 align-items: center;
-                gap: 10px;
 
                 .location-btn {
                     display: flex;
@@ -50,7 +53,6 @@ header {
                         width: 65%;
                         height: 100%;
                         object-fit: contain;
-
                     }
                 }
 
@@ -69,6 +71,16 @@ header {
                         font-weight: 500;
                     }
                 }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width:991px) {
+    header {
+        .header-content {
+            .header-main {
+                justify-content: center;
             }
         }
     }
