--- a/src/components/SearchInp/SearchInp.scss
+++ b/src/components/SearchInp/SearchInp.scss
@@ -1,26 +1,51 @@
-.search_content{
+.search_content {
     width: 100%;
-    input{
-        width: 100%;
-        height: 2.8rem;
-        padding: 0 2em 0 1em;
-        border: none;
-        font-size: 16px;
-        border-radius: 5px;
-        &::placeholder{
-            color:rgba($color: black, $alpha: 0.4);
+
+    form {
+        input {
+            width: 444px;
+            height: 2.8rem;
+            padding: 0 2em 0 1em;
+            border: none;
+            font-size: 16px;
+            border-radius: 5px;
+
+            &::placeholder {
+                color: rgba($color: rgba(0, 0, 0, 0.367), $alpha: 0.4);
+            }
         }
     }
 }
-@media only screen and (max-width: 768px){
-.search_content{
-    input{
-        text-align: center;
-        background-color: yellow;
-        border-radius: 30px;
-        &:focus{
-            background-color: white;
+
+@media only screen and (max-width: 991px) {
+    .search_content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        form {
+            width: 78%;
+
+            input {
+                width: 100%;
+                margin: 0 auto;
+            }
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .search_content {
+        form {
+            input {
+                text-align: center;
+                background-color: yellow;
+                border-radius: 30px;
+
+                &:focus {
+                    background-color: white;
+                }
+            }
+        }
+    }
 }
