--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -31,6 +31,10 @@ header {
                 flex-direction: column;
             }
 
+            .log-in-phone {
+                display: none;
+            }
+
             .log-in {
                 display: flex;
                 align-items: center;
@@ -82,6 +86,45 @@ header {
         .header-content {
             .header-main {
                 justify-content: center;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    header {
+        background-image: none;
+        background-color: #ffe031;
+        height: 220px;
+
+        .header-content {
+            .header-main {
+                .icon {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .log-in-phone {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 2.8rem;
+                    height: 2.8rem;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    background-color: hsla(0, 0%, 100%, .7);
+
+                    img {
+                        margin-left: 11px;
+                        width: 50%;
+                        height: 50%;
+                    }
+                }
+
+                .log-in {
+                    display: none;
+                }
             }
         }
     }
