--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -75,6 +75,7 @@
                 padding: 0 1rem;
                 margin-bottom: 0.3rem;
                 border: 1px solid #ccc;
+                font-size: 18px;
 
                 &::placeholder {
                     color: rgba(0, 0, 0, 0.7);
@@ -108,6 +109,14 @@
     .login {
         .login-content {
             width: 90%;
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .login {
+        .login-content {
+            width: 70%;
         }
     }
 }
