--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -84,6 +84,10 @@
             }
         }
 
+        .active-btn {
+            background-color: yellow;
+        }
+
         .login-btn {
             width: 100%;
             height: 2.5rem;
