--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,7 @@ header {
     justify-content: center;
     align-items: center;
     background-position: center;
+    margin-bottom: 30px;
 
     .header-content {
         display: flex;
