--- a/src/components/Slider/Carousel.scss
+++ b/src/components/Slider/Carousel.scss
@@ -1,32 +1,61 @@
 .carousel {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     cursor: pointer;
     user-select: none;
 
-    .carousel_item {
+    .next_prev {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 15px;
-        width: 144px;
-        height: 144px;
-        border: 1px solid #EEE;
-        border-radius: 15px;
-
-        img {
-            width: 60px;
-            height: 60px;
-        }
-
-        p {
-            font-size: 18px;
+        width: 40px;
+        height: 40px;
+        background-color: #ffc107;
+        border-radius: 100%;
+        transition: 0.5s;
+        svg {
+            width: 20px;
+            height: 20px;
         }
 
         &:hover {
+            background-color: #ffa000;
+        }
+    }
+
+    .prev_img {
+        transform: rotate(180deg);
+        
+    }
+    .all_items {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        .carousel_item {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 15px;
+            width: 144px;
+            height: 144px;
+            border: 1px solid #EEE;
+            border-radius: 15px;
+    
+            img {
+                width: 60px;
+                height: 60px;
+            }
+    
             p {
-                color: #007bff;
+                font-size: 18px;
+            }
+    
+            &:hover {
+                p {
+                    color: #007bff;
+                }
             }
         }
     }
