--- a/src/components/Slider/Carousel.scss
+++ b/src/components/Slider/Carousel.scss
@@ -5,6 +5,7 @@
     cursor: pointer;
     user-select: none;
 
+
     .next_prev {
         display: flex;
         justify-content: center;
@@ -50,6 +51,8 @@
     
             p {
                 font-size: 18px;
+                font-family: sans-serif;
+                font-weight: 600;
             }
     
             &:hover {
