--- a/src/components/SearchInp/SearchInp.scss
+++ b/src/components/SearchInp/SearchInp.scss
@@ -2,8 +2,10 @@
     width: 100%;
 
     form {
+        width: 40%;
+
         input {
-            width: 444px;
+            width: 100%;
             height: 2.8rem;
             padding: 0 2em 0 1em;
             border: none;
@@ -11,7 +13,8 @@
             border-radius: 5px;
 
             &::placeholder {
-                color: rgba($color: rgba(0, 0, 0, 0.367), $alpha: 0.4);
+                color: rgba(255, 255, 255, 0.7);
+                font-size: 17px;
             }
         }
     }
@@ -25,7 +28,7 @@
         align-items: center;
 
         form {
-            width: 78%;
+            width: 80%;
 
             input {
                 width: 100%;
@@ -38,10 +41,19 @@
 @media only screen and (max-width: 768px) {
     .search_content {
         form {
+            width: 100%;
+
             input {
                 text-align: center;
-                background-color: yellow;
-                border-radius: 30px;
+                height: 2.2rem;
+                padding: 0 0.9375rem;
+                color: #fff;
+                font-size: 14px;
+                border: none;
+                -webkit-border-radius: 1rem;
+                -moz-border-radius: 1rem;
+                border-radius: 1rem;
+                background-color: rgba(0, 0, 0, .14);
 
                 &:focus {
                     background-color: white;
