--- a/src/components/SearchInp/SearchInp.scss
+++ b/src/components/SearchInp/SearchInp.scss
@@ -13,12 +13,14 @@
             font-size: 16px;
             border-radius: 5px;
             z-index: 100;
+
             &::placeholder {
-                color: rgba(255, 255, 255, 0.7);
+                color: rgba(255, 255, 255, .35);
                 font-size: 17px;
             }
         }
-        span{
+
+        span {
             position: fixed;
             width: 100%;
             top: 0;
@@ -26,7 +28,7 @@
             right: 0;
             bottom: 0;
             cursor: pointer;
-            background-color: rgba(0,0,0,.5);
+            background-color: rgba(0, 0, 0, .5);
             z-index: 99;
 
         }
@@ -39,8 +41,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
         form {
             width: 80%;
+
             input {
                 width: 100%;
                 margin: 0 auto;
