--- a/src/components/SearchInp/SearchInp.scss
+++ b/src/components/SearchInp/SearchInp.scss
@@ -15,7 +15,7 @@
             z-index: 100;
 
             &::placeholder {
-                color: rgba(255, 255, 255, .35);
+                color: #633d3d98;
                 font-size: 17px;
             }
         }
